--- a/ForgetPassword.html
+++ b/ForgetPassword.html
@@ -3,11 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="icon"
-            href="./assets/_Horizontal Bright Logo 1.png"
-            type="image/x-icon"
-        />
+        <link rel="icon" href="assets/logo.png" type="image/x-icon" />
         <link rel="stylesheet" href="styles.css" />
         <title>Forget Password</title>
         <script src="https://cdn.tailwindcss.com"></script>
@@ -18,11 +14,8 @@
             class="flex justify-between items-center bg-[#11404c] w-full mx-auto px-6 py-4 shadow-sm sticky top-0 z-50"
         >
             <div class="logo flex items-center">
-                <img
-                    src="./assets/_Horizontal Bright Logo 1.png"
-                    alt="logo"
-                    class="w-[90%]"
-                />
+                <img src="assets/logo.png" alt="logo" class="w-[80%]" />
+
                 <h1 class="text-white text-2xl font-semibold tracking-widest">
                     ESM
                 </h1>
