--- a/home.html
+++ b/home.html
@@ -5,11 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- icons -->
-        <link
-            rel="icon"
-            href="./assets/_Horizontal Bright Logo 1.png"
-            type="image/x-icon"
-        />
+        <link rel="icon" href="assets/logo.png" type="image/x-icon" />
 
         <!-- font-awesome -->
         <link
@@ -28,11 +24,7 @@
             class="flex justify-between items-center bg-[#11404c] w-full mx-auto px-10 py-4 shadow-sm sticky top-0 z-50"
         >
             <div class="logo flex items-center">
-                <img
-                    src="./assets/_Horizontal Bright Logo 1.png"
-                    alt="logo"
-                    class="w-[80%]"
-                />
+                <img src="assets/logo.png" alt="logo" class="w-[80%]" />
                 <h1 class="text-white text-2xl font-semibold tracking-widest">
                     ESM
                 </h1>
